# echoes_LifeMemoir

./: .gitignore  .mcp.json  CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.yml  security_best_practices_report.md  test_extraction.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py
backend/app/knowledge_extraction/: __init__.py  config.py
backend/docs/: llm-api-call-map.md
backend/docs/migration/: baseline_entrypoints.md  behavior_equivalence.md  behavior_regression_report.json  checkpoint_recovery_report.json  ddd_audit_report.json  final_migration_report.md  interview_workflow_diff_report.json  interview_workflow_node_boundaries.md  layer_mapping_v1.md  main_workflows_ab_report.json  migration_constraints.md  node_detail_report_template.md  performance_report.json  performance_summary.md  redundancy_cleanup_rollback.md  redundant_module_inventory.md  rollback_drill_report.json
backend/examples/: 1.txt  interview_timeline_sample_alice.txt
backend/scripts/: __init__.py  check_layer_dependencies.py  migrate_chunks_db.py  process_dialogue.py  run_pipeline.py  test_full_assistance_flow.py  test_interview_service.py  test_knowledge_extract.py  test_memoir_generation.py  test_timeline_generation.py
backend/scripts/migration/: baseline_samples.json  check_module_naming.py  export_workflow_visuals.py  final_verification.py  interview_workflow_parity.py  main_workflows_ab_parity.py  perf_experiments.py  replay_baseline.py  runtime_gateway_smoke.py
backend/src/: __init__.py  config.py
backend/src/app/: main.py
backend/src/application/: __init__.py
backend/src/core/: __init__.py  config.py  logging.py  paths.py  runtime_guard.py  security.py
backend/src/database/: __init__.py  character_writer.py  chunk_store.py  event_writer.py  sqlite_client.py  vector_store.py
backend/src/domain/: __init__.py  events.py  (+2 more)
backend/tests/: conftest.py  sample_dialogue.txt  test_api_error_contracts.py  test_api_v1_contract.py  test_asr_sign.py  test_auth_cookie_flow.py  test_auth_service.py  test_concurrency_metrics_snapshot.py  test_generate_memoir.py  test_generate_timeline.py  test_interview_session.py  test_interview_session_app_service.py  test_knowledge_process.py  test_knowledge_query_service.py  test_knowledge_sse_contract.py  test_llm_gateway_contract.py  test_material_domain_rules.py  test_migration_phase_registry.py  test_pending_event_domain_rules.py  test_runtime_hardening.py  test_security_env_guard.py  test_session_registry_cleanup.py  test_session_status_domain_rules.py  test_sqlite_client_boundary.py  test_unhandled_exception_handler.py  test_workflow_facade.py  test_workflow_guardrails.py
backend/tools/: layer_dependency_rules.md
(+348 files in other folders)
