[tool.poetry]
name = "echoes-backend"
version = "0.1.0"
description = "Echoes LifeMemoir Backend - 知识图谱构建与回忆录生成"
authors = ["Echoes Team"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"

# Web 框架
fastapi = "^0.132.0"
uvicorn = { extras = ["standard"], version = "^0.41.0" }
pydantic = "^2.12.0"
pydantic-settings = "^2.13.0"

# LangGraph 工作流引擎
langgraph = "^1.0.0"

# 向量嵌入
google-genai = ">=1.0.0"
sqlite-vec = ">=0.1.6"

# HTTP 客户端
httpx = "^0.28.1"

# 认证
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }

# 工具
python-dotenv = "^1.0.1"
python-multipart = "^0.0.20"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.0"
mypy = "^1.14.0"
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
